# rust_deepFace

./: .gitignore  COMMANDS.md  Cargo.toml  Q&A.md  commit_message.txt  export_to_onnx.py  gitpush.md  test_all_faces.py  test_verify.ps1
archive/: HOW_TO_TEST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  Prompt.txt  QUICK_START.md  README.md  RUN_SERVER.md  SETUP.md  SUCCESS_REPORT.md  TRACT_MIGRATION_COMPLETE.md  attendance_v8.py  isssue.txt  leakpassword.txt  quick_test.py
src/: alignment.rs  errors.rs  inference.rs  main.rs  math.rs  mtcnn.rs  preprocessing.rs
test_images/Anjelina Jolie/: README.txt
